2009-05-06  Loic Dachary <loic@dachary.org>

 	* Release 1.7.5

	* po/da.po, po/de.po, po/en.po, po/en_CA.po, po/en_US.po, po/es.po,
	  po/fi.po, po/fr.po, po/fr_BE.po, po/fr_CA.po, po/fr_FX.po,
	  po/it.po, po/nb.po, po/nl.po, po/pt.po, po/sv.po: updated
	  translations
	* tests/conf/poker.client.xml.in: bump version 1.7.5
	* conf/poker.bot.xml.in, conf/poker.client.xml.in,
	  conf/poker.server.xml.in, examples/poker.bot.xml,
	  examples/poker.server-monotone.xml, examples/poker.server.xml,
	  pokerclient2d/poker2d.xml.in, pokerprizes/poker.prizes.xml.in,
	  pokerstats/poker.stats.xml.in: bump version 1.7.5

2009-05-05  Loic Dachary <loic@dachary.org>

	* ChangeLog, NEWS, debian/changelog, pokernetwork/__init__.py: bump
	  version to 1.7.5

2009-05-05  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerservice.py.in
	(PokerServiceTestCase.test15_runTourney)
	(TourneyManagerTestCase.test01_no_rank): use search_output instead
	of direct comparison to get_messages() in case other verbosity
	causes confusion.

2009-04-19  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/run.in (COVERAGE_100_PERCENT): Added pokermemchache.py.

	* tests/test-pokermemcache.py.in
	(MemcacheTestCase.test03_checkKeyNoString): Wrote test.

2009-04-18  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/run.in (COVERAGE_100_PERCENT): added currencyclient!

	* tests/test-currencyclient.py.in
	(CurrencyClientTestCase.test07_1_breakNote_oddLeftOver): Wrote test.
	(Run): Test classes were not loaded correctly.
	(ErrorCondtionsCurrencyClientTestCase): Created additional test class.
	(ErrorCondtionsCurrencyClientTestCase.test01_parseResultNote_InvalidResult):
	Wrote test.
	(ErrorCondtionsCurrencyClientTestCase.test02_commit_multiLineResult):
	Wrote test.
	(FakeCurrencyClientTestCase.test10_breakNote_FakeCurrencyFailure):
	Wrote test.
	(ErrorCondtionsCurrencyClientTestCase.test03_checkNote_checkNoteResultIsFalse):
	Wrote test.
	(ErrorCondtionsCurrencyClientTestCase.test04_commit_commitResultIsFalse):